--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -14,7 +14,7 @@
 }
 @font-face {
   font-family: 'Yantramanav';
-  src: url('./fonts/Yantramanav-Bold.woff2') format('woff2');
+  src: url('../fonts/Yantramanav-Bold.woff2') format('woff2');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
